# deepseek_prompt_generator_comfyui

./: README.md  __init__.py  config.ini.example  pyproject.toml
deepseek_prompt_exp/: base_node.py  exp_config.py  ollama_client.py
js/: prompt_exp.js
