[project]
name = "deepseek_prompt_generator_comfyui"
description = "Prompt Expansion for Stable Diffusion, using Deepseek API."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["openai"]

[project.urls]
Repository = "https://github.com/comfyuiblog/deepseek_prompt_generator_comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "comfyuiblog"
DisplayName = "deepseek_prompt_generator_comfyui"
Icon = ""
